Basic Recursion - Striver A2Z

--- a/challenges/leetcode/50HL30D.ipynb
+++ b/challenges/leetcode/50HL30D.ipynb
@@ -2855,6 +2855,7 @@
      "iopub.status.idle": "2024-02-26T17:08:52.862352Z",
      "shell.execute_reply": "2024-02-26T17:08:52.860891Z"
     },
+    "lines_to_next_cell": 2,
     "papermill": {
      "duration": 0.055905,
      "end_time": "2024-02-26T17:08:52.865013",
@@ -3074,27 +3075,6 @@
     "\n",
     "\"\"\", con=conn)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "aa9ff97a",
-   "metadata": {},
-   "source": [
-    "# 28. \n",
-    "Date: 27th Feb 2024<br>\n",
-    "Hard Leetcode: stamping-the-sequence<br>\n",
-    "Solution:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "24b75044",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
