--- a/practice/001.ipynb
+++ b/practice/001.ipynb
@@ -2,9 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1c418c0d",
-   "metadata": {},
+   "execution_count": 1,
+   "id": "1c40ad22",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-02-28T02:00:19.145447Z",
+     "iopub.status.busy": "2024-02-28T02:00:19.143296Z",
+     "iopub.status.idle": "2024-02-28T02:00:19.976691Z",
+     "shell.execute_reply": "2024-02-28T02:00:19.975899Z"
+    },
+    "papermill": {
+     "duration": 0.844768,
+     "end_time": "2024-02-28T02:00:19.978470",
+     "exception": false,
+     "start_time": "2024-02-28T02:00:19.133702",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from typing import List, Optional\n",
@@ -40,17 +55,42 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b842b0c",
-   "metadata": {},
+   "id": "4fb8e6c0",
+   "metadata": {
+    "papermill": {
+     "duration": 0.001506,
+     "end_time": "2024-02-28T02:00:19.981925",
+     "exception": false,
+     "start_time": "2024-02-28T02:00:19.980419",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "source": [
     "#### Helper for Binary tree problems"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9a0455e8",
-   "metadata": {},
+   "execution_count": 2,
+   "id": "5cff3cee",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-02-28T02:00:19.986661Z",
+     "iopub.status.busy": "2024-02-28T02:00:19.985852Z",
+     "iopub.status.idle": "2024-02-28T02:00:19.993668Z",
+     "shell.execute_reply": "2024-02-28T02:00:19.992967Z"
+    },
+    "lines_to_next_cell": 1,
+    "papermill": {
+     "duration": 0.012073,
+     "end_time": "2024-02-28T02:00:19.995476",
+     "exception": false,
+     "start_time": "2024-02-28T02:00:19.983403",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "class BinaryTreeNode:\n",
@@ -98,26 +138,46 @@
     "                else:\n",
     "                    forest[parent_idx].right = curr\n",
     "\n",
-    "        return forest[0]\n",
-    "\n",
-    "temp = BinaryTreeNode.from_array([1,2,3,4,5,6,None,None,None,7,8])\n",
-    "temp.to_list()"
+    "        return forest[0]"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d1b31211",
-   "metadata": {},
+   "id": "3a05e040",
+   "metadata": {
+    "papermill": {
+     "duration": 0.001781,
+     "end_time": "2024-02-28T02:00:19.999845",
+     "exception": false,
+     "start_time": "2024-02-28T02:00:19.998064",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "source": [
     "#### Helper for Singly Linked lists"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "475898fd",
+   "execution_count": 3,
+   "id": "97e5cff8",
    "metadata": {
-    "lines_to_next_cell": 1
+    "execution": {
+     "iopub.execute_input": "2024-02-28T02:00:20.004075Z",
+     "iopub.status.busy": "2024-02-28T02:00:20.003740Z",
+     "iopub.status.idle": "2024-02-28T02:00:20.009530Z",
+     "shell.execute_reply": "2024-02-28T02:00:20.008576Z"
+    },
+    "lines_to_next_cell": 1,
+    "papermill": {
+     "duration": 0.010782,
+     "end_time": "2024-02-28T02:00:20.012132",
+     "exception": false,
+     "start_time": "2024-02-28T02:00:20.001350",
+     "status": "completed"
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -154,9 +214,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9fc61602",
-   "metadata": {},
+   "execution_count": 4,
+   "id": "fa9ec8f3",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-02-28T02:00:20.021179Z",
+     "iopub.status.busy": "2024-02-28T02:00:20.020842Z",
+     "iopub.status.idle": "2024-02-28T02:00:20.026748Z",
+     "shell.execute_reply": "2024-02-28T02:00:20.026015Z"
+    },
+    "papermill": {
+     "duration": 0.013029,
+     "end_time": "2024-02-28T02:00:20.028675",
+     "exception": false,
+     "start_time": "2024-02-28T02:00:20.015646",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Problem Category: Easy\n",
@@ -191,8 +266,32 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.5"
+  },
+  "papermill": {
+   "default_parameters": {},
+   "duration": 2.487423,
+   "end_time": "2024-02-28T02:00:20.349463",
+   "environment_variables": {},
+   "exception": null,
+   "input_path": "001.ipynb",
+   "output_path": "001.ipynb",
+   "parameters": {},
+   "start_time": "2024-02-28T02:00:17.862040",
+   "version": "2.4.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 5
 }
