--- a/study/striver-A2Z/02-basic-math.ipynb
+++ b/study/striver-A2Z/02-basic-math.ipynb
@@ -5,10 +5,10 @@
    "id": "7a3eac84",
    "metadata": {
     "papermill": {
-     "duration": 0.005821,
-     "end_time": "2024-02-27T03:01:44.556207",
+     "duration": 0.008682,
+     "end_time": "2024-02-28T01:59:56.208809",
      "exception": false,
-     "start_time": "2024-02-27T03:01:44.550386",
+     "start_time": "2024-02-28T01:59:56.200127",
      "status": "completed"
     },
     "tags": []
@@ -23,16 +23,16 @@
    "id": "27c2f0df",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-27T03:01:44.570558Z",
-     "iopub.status.busy": "2024-02-27T03:01:44.569679Z",
-     "iopub.status.idle": "2024-02-27T03:01:44.594624Z",
-     "shell.execute_reply": "2024-02-27T03:01:44.591066Z"
+     "iopub.execute_input": "2024-02-28T01:59:56.228441Z",
+     "iopub.status.busy": "2024-02-28T01:59:56.227578Z",
+     "iopub.status.idle": "2024-02-28T01:59:56.252131Z",
+     "shell.execute_reply": "2024-02-28T01:59:56.251075Z"
     },
     "papermill": {
-     "duration": 0.037002,
-     "end_time": "2024-02-27T03:01:44.598834",
+     "duration": 0.037673,
+     "end_time": "2024-02-28T01:59:56.254689",
      "exception": false,
-     "start_time": "2024-02-27T03:01:44.561832",
+     "start_time": "2024-02-28T01:59:56.217016",
      "status": "completed"
     },
     "tags": []
@@ -49,17 +49,17 @@
    "id": "48b302bb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-27T03:01:44.624360Z",
-     "iopub.status.busy": "2024-02-27T03:01:44.622310Z",
-     "iopub.status.idle": "2024-02-27T03:01:44.643886Z",
-     "shell.execute_reply": "2024-02-27T03:01:44.641476Z"
+     "iopub.execute_input": "2024-02-28T01:59:56.262987Z",
+     "iopub.status.busy": "2024-02-28T01:59:56.262681Z",
+     "iopub.status.idle": "2024-02-28T01:59:56.268306Z",
+     "shell.execute_reply": "2024-02-28T01:59:56.267413Z"
     },
     "lines_to_next_cell": 2,
     "papermill": {
-     "duration": 0.043409,
-     "end_time": "2024-02-27T03:01:44.647294",
+     "duration": 0.012236,
+     "end_time": "2024-02-28T01:59:56.270384",
      "exception": false,
-     "start_time": "2024-02-27T03:01:44.603885",
+     "start_time": "2024-02-28T01:59:56.258148",
      "status": "completed"
     },
     "tags": []
@@ -98,16 +98,16 @@
    "id": "228219f8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-27T03:01:44.655418Z",
-     "iopub.status.busy": "2024-02-27T03:01:44.654672Z",
-     "iopub.status.idle": "2024-02-27T03:01:44.662241Z",
-     "shell.execute_reply": "2024-02-27T03:01:44.660544Z"
+     "iopub.execute_input": "2024-02-28T01:59:56.278691Z",
+     "iopub.status.busy": "2024-02-28T01:59:56.278030Z",
+     "iopub.status.idle": "2024-02-28T01:59:56.282822Z",
+     "shell.execute_reply": "2024-02-28T01:59:56.281934Z"
     },
     "papermill": {
-     "duration": 0.014812,
-     "end_time": "2024-02-27T03:01:44.665190",
+     "duration": 0.010632,
+     "end_time": "2024-02-28T01:59:56.284902",
      "exception": false,
-     "start_time": "2024-02-27T03:01:44.650378",
+     "start_time": "2024-02-28T01:59:56.274270",
      "status": "completed"
     },
     "tags": []
@@ -137,17 +137,17 @@
    "id": "50d26615",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-27T03:01:44.673875Z",
-     "iopub.status.busy": "2024-02-27T03:01:44.672946Z",
-     "iopub.status.idle": "2024-02-27T03:01:44.680976Z",
-     "shell.execute_reply": "2024-02-27T03:01:44.679116Z"
+     "iopub.execute_input": "2024-02-28T01:59:56.292384Z",
+     "iopub.status.busy": "2024-02-28T01:59:56.291823Z",
+     "iopub.status.idle": "2024-02-28T01:59:56.296303Z",
+     "shell.execute_reply": "2024-02-28T01:59:56.295558Z"
     },
     "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.0158,
-     "end_time": "2024-02-27T03:01:44.683884",
+     "duration": 0.009465,
+     "end_time": "2024-02-28T01:59:56.298273",
      "exception": false,
-     "start_time": "2024-02-27T03:01:44.668084",
+     "start_time": "2024-02-28T01:59:56.288808",
      "status": "completed"
     },
     "tags": []
@@ -177,16 +177,16 @@
    "id": "7939a9d7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-27T03:01:44.692009Z",
-     "iopub.status.busy": "2024-02-27T03:01:44.691610Z",
-     "iopub.status.idle": "2024-02-27T03:01:44.702612Z",
-     "shell.execute_reply": "2024-02-27T03:01:44.700614Z"
+     "iopub.execute_input": "2024-02-28T01:59:56.306034Z",
+     "iopub.status.busy": "2024-02-28T01:59:56.305301Z",
+     "iopub.status.idle": "2024-02-28T01:59:56.310476Z",
+     "shell.execute_reply": "2024-02-28T01:59:56.309743Z"
     },
     "papermill": {
-     "duration": 0.01884,
-     "end_time": "2024-02-27T03:01:44.705246",
+     "duration": 0.010199,
+     "end_time": "2024-02-28T01:59:56.312466",
      "exception": false,
-     "start_time": "2024-02-27T03:01:44.686406",
+     "start_time": "2024-02-28T01:59:56.302267",
      "status": "completed"
     },
     "tags": []
@@ -217,16 +217,16 @@
    "id": "a1ad42ba",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-27T03:01:44.714477Z",
-     "iopub.status.busy": "2024-02-27T03:01:44.713143Z",
-     "iopub.status.idle": "2024-02-27T03:01:44.721347Z",
-     "shell.execute_reply": "2024-02-27T03:01:44.719559Z"
+     "iopub.execute_input": "2024-02-28T01:59:56.318156Z",
+     "iopub.status.busy": "2024-02-28T01:59:56.317534Z",
+     "iopub.status.idle": "2024-02-28T01:59:56.322601Z",
+     "shell.execute_reply": "2024-02-28T01:59:56.321860Z"
     },
     "papermill": {
-     "duration": 0.016255,
-     "end_time": "2024-02-27T03:01:44.724137",
+     "duration": 0.009573,
+     "end_time": "2024-02-28T01:59:56.324083",
      "exception": false,
-     "start_time": "2024-02-27T03:01:44.707882",
+     "start_time": "2024-02-28T01:59:56.314510",
      "status": "completed"
     },
     "tags": []
@@ -256,16 +256,16 @@
    "id": "f64a952c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-27T03:01:44.733727Z",
-     "iopub.status.busy": "2024-02-27T03:01:44.732893Z",
-     "iopub.status.idle": "2024-02-27T03:01:44.740850Z",
-     "shell.execute_reply": "2024-02-27T03:01:44.739323Z"
+     "iopub.execute_input": "2024-02-28T01:59:56.330425Z",
+     "iopub.status.busy": "2024-02-28T01:59:56.329698Z",
+     "iopub.status.idle": "2024-02-28T01:59:56.334794Z",
+     "shell.execute_reply": "2024-02-28T01:59:56.333979Z"
     },
     "papermill": {
-     "duration": 0.015358,
-     "end_time": "2024-02-27T03:01:44.743236",
+     "duration": 0.010285,
+     "end_time": "2024-02-28T01:59:56.336731",
      "exception": false,
-     "start_time": "2024-02-27T03:01:44.727878",
+     "start_time": "2024-02-28T01:59:56.326446",
      "status": "completed"
     },
     "tags": []
@@ -299,16 +299,16 @@
    "id": "fb3d2c16",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-27T03:01:44.752215Z",
-     "iopub.status.busy": "2024-02-27T03:01:44.751811Z",
-     "iopub.status.idle": "2024-02-27T03:01:44.759199Z",
-     "shell.execute_reply": "2024-02-27T03:01:44.757383Z"
+     "iopub.execute_input": "2024-02-28T01:59:56.343029Z",
+     "iopub.status.busy": "2024-02-28T01:59:56.342792Z",
+     "iopub.status.idle": "2024-02-28T01:59:56.347324Z",
+     "shell.execute_reply": "2024-02-28T01:59:56.346547Z"
     },
     "papermill": {
-     "duration": 0.015464,
-     "end_time": "2024-02-27T03:01:44.761574",
+     "duration": 0.009611,
+     "end_time": "2024-02-28T01:59:56.349222",
      "exception": false,
-     "start_time": "2024-02-27T03:01:44.746110",
+     "start_time": "2024-02-28T01:59:56.339611",
      "status": "completed"
     },
     "tags": []
@@ -352,18 +352,18 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.5"
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 2.080938,
-   "end_time": "2024-02-27T03:01:45.189263",
+   "duration": 1.614529,
+   "end_time": "2024-02-28T01:59:56.573814",
    "environment_variables": {},
    "exception": null,
-   "input_path": "basic-math.ipynb",
-   "output_path": "basic-math.ipynb",
+   "input_path": "02-basic-math.ipynb",
+   "output_path": "02-basic-math.ipynb",
    "parameters": {},
-   "start_time": "2024-02-27T03:01:43.108325",
+   "start_time": "2024-02-28T01:59:54.959285",
    "version": "2.4.0"
   }
  },
