Quick sort - Striver A2Z

--- a/study/striver-A2Z/05-sorting.ipynb
+++ b/study/striver-A2Z/05-sorting.ipynb
@@ -5,10 +5,10 @@
    "id": "7d2510f0",
    "metadata": {
     "papermill": {
-     "duration": 0.008801,
-     "end_time": "2024-02-29T03:17:29.907712",
+     "duration": 0.01218,
+     "end_time": "2024-03-01T02:13:07.198717",
      "exception": false,
-     "start_time": "2024-02-29T03:17:29.898911",
+     "start_time": "2024-03-01T02:13:07.186537",
      "status": "completed"
     },
     "tags": []
@@ -23,17 +23,17 @@
    "id": "dc9caee0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-29T03:17:29.932257Z",
-     "iopub.status.busy": "2024-02-29T03:17:29.930851Z",
-     "iopub.status.idle": "2024-02-29T03:17:30.018112Z",
-     "shell.execute_reply": "2024-02-29T03:17:30.017263Z"
+     "iopub.execute_input": "2024-03-01T02:13:07.223852Z",
+     "iopub.status.busy": "2024-03-01T02:13:07.222964Z",
+     "iopub.status.idle": "2024-03-01T02:13:07.307042Z",
+     "shell.execute_reply": "2024-03-01T02:13:07.306236Z"
     },
     "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.100705,
-     "end_time": "2024-02-29T03:17:30.019922",
+     "duration": 0.098136,
+     "end_time": "2024-03-01T02:13:07.308673",
      "exception": false,
-     "start_time": "2024-02-29T03:17:29.919217",
+     "start_time": "2024-03-01T02:13:07.210537",
      "status": "completed"
     },
     "tags": []
@@ -41,7 +41,8 @@
    "outputs": [],
    "source": [
     "# Necessary imports\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import random"
    ]
   },
   {
@@ -50,17 +51,17 @@
    "id": "6379e2eb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-29T03:17:30.026056Z",
-     "iopub.status.busy": "2024-02-29T03:17:30.025312Z",
-     "iopub.status.idle": "2024-02-29T03:17:30.031989Z",
-     "shell.execute_reply": "2024-02-29T03:17:30.031212Z"
+     "iopub.execute_input": "2024-03-01T02:13:07.314896Z",
+     "iopub.status.busy": "2024-03-01T02:13:07.314079Z",
+     "iopub.status.idle": "2024-03-01T02:13:07.322820Z",
+     "shell.execute_reply": "2024-03-01T02:13:07.322066Z"
     },
     "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.012038,
-     "end_time": "2024-02-29T03:17:30.033866",
+     "duration": 0.013789,
+     "end_time": "2024-03-01T02:13:07.324732",
      "exception": false,
-     "start_time": "2024-02-29T03:17:30.021828",
+     "start_time": "2024-03-01T02:13:07.310943",
      "status": "completed"
     },
     "tags": []
@@ -89,7 +90,7 @@
     "\n",
     "# Testing the algorithm\n",
     "for _ in range(5):\n",
-    "    arr = np.random.randint(100, size=50).tolist()\n",
+    "    arr = np.random.randint(100, size=random.randint(50, 100)).tolist()\n",
     "    assert selection_sort(arr) == sorted(arr)"
    ]
   },
@@ -99,17 +100,17 @@
    "id": "23fba2fa",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-29T03:17:30.038464Z",
-     "iopub.status.busy": "2024-02-29T03:17:30.038085Z",
-     "iopub.status.idle": "2024-02-29T03:17:30.044255Z",
-     "shell.execute_reply": "2024-02-29T03:17:30.043490Z"
+     "iopub.execute_input": "2024-03-01T02:13:07.334072Z",
+     "iopub.status.busy": "2024-03-01T02:13:07.333801Z",
+     "iopub.status.idle": "2024-03-01T02:13:07.341939Z",
+     "shell.execute_reply": "2024-03-01T02:13:07.340974Z"
     },
     "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.010151,
-     "end_time": "2024-02-29T03:17:30.045673",
+     "duration": 0.017383,
+     "end_time": "2024-03-01T02:13:07.346069",
      "exception": false,
-     "start_time": "2024-02-29T03:17:30.035522",
+     "start_time": "2024-03-01T02:13:07.328686",
      "status": "completed"
     },
     "tags": []
@@ -142,7 +143,7 @@
     "\n",
     "# Testing the algorithm\n",
     "for _ in range(5):\n",
-    "    arr = np.random.randint(100, size=50).tolist()\n",
+    "    arr = np.random.randint(100, size=random.randint(50, 100)).tolist()\n",
     "    assert bubble_sort(arr) == sorted(arr)"
    ]
   },
@@ -152,17 +153,17 @@
    "id": "736c4faf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-29T03:17:30.050353Z",
-     "iopub.status.busy": "2024-02-29T03:17:30.050007Z",
-     "iopub.status.idle": "2024-02-29T03:17:30.062378Z",
-     "shell.execute_reply": "2024-02-29T03:17:30.061599Z"
+     "iopub.execute_input": "2024-03-01T02:13:07.352140Z",
+     "iopub.status.busy": "2024-03-01T02:13:07.351861Z",
+     "iopub.status.idle": "2024-03-01T02:13:07.358569Z",
+     "shell.execute_reply": "2024-03-01T02:13:07.357739Z"
     },
     "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.016954,
-     "end_time": "2024-02-29T03:17:30.064271",
+     "duration": 0.011307,
+     "end_time": "2024-03-01T02:13:07.360038",
      "exception": false,
-     "start_time": "2024-02-29T03:17:30.047317",
+     "start_time": "2024-03-01T02:13:07.348731",
      "status": "completed"
     },
     "tags": []
@@ -190,7 +191,7 @@
     "\n",
     "# Testing the algorithm\n",
     "for _ in range(5):\n",
-    "    arr = np.random.randint(100, size=50).tolist()\n",
+    "    arr = np.random.randint(100, size=random.randint(50, 100)).tolist()\n",
     "    assert insertion_sort(arr) == sorted(arr)"
    ]
   },
@@ -199,10 +200,10 @@
    "id": "bf92642e",
    "metadata": {
     "papermill": {
-     "duration": 0.003136,
-     "end_time": "2024-02-29T03:17:30.070491",
+     "duration": 0.00193,
+     "end_time": "2024-03-01T02:13:07.364027",
      "exception": false,
-     "start_time": "2024-02-29T03:17:30.067355",
+     "start_time": "2024-03-01T02:13:07.362097",
      "status": "completed"
     },
     "tags": []
@@ -217,24 +218,36 @@
    "id": "dca36744",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-29T03:17:30.075693Z",
-     "iopub.status.busy": "2024-02-29T03:17:30.075087Z",
-     "iopub.status.idle": "2024-02-29T03:17:30.081854Z",
-     "shell.execute_reply": "2024-02-29T03:17:30.080938Z"
+     "iopub.execute_input": "2024-03-01T02:13:07.369658Z",
+     "iopub.status.busy": "2024-03-01T02:13:07.369440Z",
+     "iopub.status.idle": "2024-03-01T02:13:07.376222Z",
+     "shell.execute_reply": "2024-03-01T02:13:07.375347Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.011242,
-     "end_time": "2024-02-29T03:17:30.083381",
+     "duration": 0.011478,
+     "end_time": "2024-03-01T02:13:07.377714",
      "exception": false,
-     "start_time": "2024-02-29T03:17:30.072139",
+     "start_time": "2024-03-01T02:13:07.366236",
      "status": "completed"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
-    "# Merge Sort\n",
+    "# Merge Sort - With aux space\n",
     "def merge_sort(arr: list[int]) -> list[int]:\n",
+    "    \"\"\"\n",
+    "    Average, Best, Worst - O(N log N)\n",
+    "    Space complexity - O (N log N)\n",
+    "\n",
+    "    Space complexity can be O(N) if we created a seperate func to merge that creates and deletes a\n",
+    "    temp arr. This array would not be stored in the stack space, at worst take up extra O(N) space.\n",
+    "    We would only be merging any two arrays at any point in time.\n",
+    "\n",
+    "    Divide the array and merge.\n",
+    "    When merging ensure that the array is merged in correct order.\n",
+    "    \"\"\"\n",
     "    N = len(arr)\n",
     "    if N <= 1:\n",
     "        return arr\n",
@@ -255,8 +268,134 @@
     "\n",
     "# Testing the algorithm\n",
     "for _ in range(5):\n",
-    "    arr = np.random.randint(100, size=50).tolist()\n",
+    "    arr = np.random.randint(100, size=random.randint(50, 100)).tolist()\n",
     "    assert merge_sort(arr) == sorted(arr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d0a6f92",
+   "metadata": {
+    "papermill": {
+     "duration": 0.001936,
+     "end_time": "2024-03-01T02:13:07.381743",
+     "exception": false,
+     "start_time": "2024-03-01T02:13:07.379807",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "#### Video Link: https://www.youtube.com/watch?v=ogjf7ORKfd8&list=PLgUwDviBIf0oF6QL8m22w1hIDC1vJ_BHz&index=14&pp=iAQB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "db97aab6",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-03-01T02:13:07.387580Z",
+     "iopub.status.busy": "2024-03-01T02:13:07.387010Z",
+     "iopub.status.idle": "2024-03-01T02:13:07.394859Z",
+     "shell.execute_reply": "2024-03-01T02:13:07.394029Z"
+    },
+    "lines_to_next_cell": 1,
+    "papermill": {
+     "duration": 0.012964,
+     "end_time": "2024-03-01T02:13:07.396797",
+     "exception": false,
+     "start_time": "2024-03-01T02:13:07.383833",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Quick Sort - Aux space\n",
+    "def quick_sort_1(arr: list[int]) -> list[int]:\n",
+    "    \"\"\"\n",
+    "    Time complexity - O(N log N)\n",
+    "    Space complexity - O(N log N)\n",
+    "\n",
+    "    Take a random index, ensure that every other element is correctly ordered relative to chosen index\n",
+    "    Repeat same for the two sub arrays created.\n",
+    "    \"\"\"\n",
+    "    N = len(arr)\n",
+    "    if N <= 1:\n",
+    "        return arr\n",
+    "    else:\n",
+    "        pivot = random.randint(0, N - 1)\n",
+    "        left = [arr[i] for i in range(N) if arr[i] < arr[pivot] and i != pivot]\n",
+    "        right = [arr[i] for i in range(N) if arr[i] >= arr[pivot] and i != pivot]\n",
+    "        merged = quick_sort_1(left) + [arr[pivot]] + quick_sort_1(right)\n",
+    "        return merged\n",
+    "\n",
+    "# Testing the algorithm\n",
+    "for _ in range(5):\n",
+    "    arr = np.random.randint(100, size=random.randint(50, 100)).tolist()\n",
+    "    assert quick_sort_1(arr) == sorted(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "41c03989",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-03-01T02:13:07.406159Z",
+     "iopub.status.busy": "2024-03-01T02:13:07.405907Z",
+     "iopub.status.idle": "2024-03-01T02:13:07.413380Z",
+     "shell.execute_reply": "2024-03-01T02:13:07.412557Z"
+    },
+    "papermill": {
+     "duration": 0.014673,
+     "end_time": "2024-03-01T02:13:07.415368",
+     "exception": false,
+     "start_time": "2024-03-01T02:13:07.400695",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Quick Sort - In place\n",
+    "def quick_sort_2(arr: list[int], low: int, high: int):\n",
+    "    \"\"\"\n",
+    "    Time complexity - O (N log N)\n",
+    "    Space complexity - O (N)\n",
+    "    \"\"\"\n",
+    "    def partition(arr: list[int], low: int, high: int):\n",
+    "        pivot = low\n",
+    "        i, j = low, high\n",
+    "        while i < j:\n",
+    "            # Move i right until we find an element greater than pivot\n",
+    "            while arr[i] <= arr[pivot] and i < high:\n",
+    "                i += 1\n",
+    "\n",
+    "            # Move j left until we find an element lesser than pivot\n",
+    "            while arr[j] > arr[pivot] and j > low:\n",
+    "                j -= 1\n",
+    "\n",
+    "            # Swap if i hasn't crossed j yet\n",
+    "            if i < j:\n",
+    "                arr[i], arr[j] = arr[j], arr[i]\n",
+    "\n",
+    "        # j is the right position for our pivot\n",
+    "        arr[pivot], arr[j] = arr[j], arr[pivot]\n",
+    "        return j\n",
+    "\n",
+    "    if low < high:\n",
+    "        partition_idx = partition(arr, low, high)\n",
+    "        quick_sort_2(arr, low, partition_idx - 1)\n",
+    "        quick_sort_2(arr, partition_idx + 1, high)\n",
+    "\n",
+    "# Testing the algorithm\n",
+    "for _ in range(5):\n",
+    "    arr = np.random.randint(100, size=random.randint(50, 100)).tolist()\n",
+    "    quick_sort_2(arr, 0, len(arr) - 1)\n",
+    "    for i in range(len(arr) - 1):\n",
+    "        assert arr[i] <= arr[i + 1]"
    ]
   }
  ],
@@ -280,14 +419,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 1.662091,
-   "end_time": "2024-02-29T03:17:30.303673",
+   "duration": 1.93143,
+   "end_time": "2024-03-01T02:13:07.742471",
    "environment_variables": {},
    "exception": null,
    "input_path": "05-sorting.ipynb",
    "output_path": "05-sorting.ipynb",
    "parameters": {},
-   "start_time": "2024-02-29T03:17:28.641582",
+   "start_time": "2024-03-01T02:13:05.811041",
    "version": "2.4.0"
   }
  },
